# foray-planner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  config.docker.yaml  config.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  publish.yml
data/: species_seed.json  species_seed.yaml
docs/: data-sources.md  deployment.md  development.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: genera.ts  layers.ts  location.ts  main.ts  map.ts  plan.ts  refresh.ts  state.ts  style.css  views.ts
frontend/src/api/: client.ts  schema.ts  types.ts
infra/: cloud-init.yaml  cloudflare-dns.sh  deploy.sh  foray-planner.service
infra/ansible/: .yamllint  AGENTS.md  ansible.cfg  pyproject.toml  requirements.yml  site.yml
infra/ansible/defaults/: main.yml
infra/ansible/handlers/: main.yml
infra/ansible/inventory/: hosts.yml
infra/ansible/meta/: argument_specs.yml  main.yml
infra/ansible/molecule/default/: converge.yml  molecule.yml
infra/ansible/tasks/: main.yml
infra/ansible/tasks/deploy/: app.yml  bulk_load_once.yml  caddy.yml  cron.yml  firewall_allow_runner.yml  firewall_revoke_runner.yml  genera_once.yml  ingest_once.yml  network.yml
infra/ansible/tasks/provision/: database.yml  droplet.yml  droplet_resize.yml  firewall.yml
infra/ansible/templates/: Caddyfile.j2  cron-genera.sh.j2  cron-ingest.sh.j2  cron-layers.sh.j2  foray.env.j2
scripts/: backfill_obscured.py  healthcheck.py  inat_dwca_filter.py  load_inat_bulk.py  scheduler.sh
src/foray/: __init__.py  api.py  api_models.py  cache.py  camps.py  cli.py  config.py  defaults.py  dispersed.py  geocode.py  inat.py  ingest.py  land.py  scoring.py  trails.py
src/foray/web/static/: app.js  style.css
src/foray/web/templates/: index.html
tests/: conftest.py  test_api.py  test_cache.py  test_camps.py  test_cli.py  test_cli_resync.py  test_config.py  test_dispersed.py  test_geocode.py  test_inat.py  test_ingest.py  test_ingest_region.py  test_land.py  test_planner.py  test_revalidate.py  test_scoring.py  test_trails.py
