[project]
name = "foray"
version = "0.1.0"
description = "Plan mushroom-hunting trips from iNaturalist observation phenology"
readme = "README.md"
authors = [{ name = "Wesley Gill", email = "jahrik@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "pyinaturalist>=0.19",
    "psycopg[binary,pool]>=3.3.4",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic-settings>=2.6",
    "click>=8.1",
    "httpx>=0.27",
    "tqdm>=4.69.0",
]

[project.scripts]
foray = "foray.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.3",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
