[project]
name = "foray-planner-ansible"
version = "0.1.0"
description = "Ansible role to deploy foray-planner to Digital Ocean"
readme = "AGENTS.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ansible-core>=2.16,<2.22",
    "ansible-lint>=24.0.0",
    "molecule>=24.0.0",
    "molecule-plugins[docker]>=23.0.0",
    "yamllint>=1.38.0",
]
